--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,8 @@
     />
     <script src="//cdn.muicss.com/mui-0.10.1/js/mui.min.js"></script>
     <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="%PUBLIC_URL%/assets/js/scripts.js"></script>
 
-    <title>React App</title>
+    <title>gTask</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
